--- a/demo-gigya/src/main/AndroidManifest.xml
+++ b/demo-gigya/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
         <activity
             android:name=".ui.activity.UserActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
