--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id "com.android.application" version "7.3.1" apply false
     id "com.android.library" version "7.3.1" apply false
-    id "org.jetbrains.kotlin.android" version "1.7.20" apply false
-    id "io.github.gradle-nexus.publish-plugin" version "1.1.0" apply true
-    id "org.jetbrains.kotlinx.binary-compatibility-validator" version "0.12.0" apply false
+    id "org.jetbrains.kotlin.android" version "1.8.21" apply false
+    id "com.google.gms.google-services" version "4.3.14" apply false
+    id "io.github.gradle-nexus.publish-plugin" version "1.3.0" apply true
+    id "org.jetbrains.kotlinx.binary-compatibility-validator" version "0.13.2" apply false
 }
 
 task clean(type: Delete) {
