--- a/demo-gigya-compose/build.gradle
+++ b/demo-gigya-compose/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id "com.android.application"
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
     namespace "com.ownid.demo.gigya"
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     apply from: rootProject.file("signing.gradle")
 
@@ -25,19 +25,40 @@ android {
             signingConfig signingConfigs.demosign
             minifyEnabled = false // Gigya SDK does not support it https://github.com/SAP/gigya-android-sdk/issues/3
             shrinkResources = false // Gigya SDK does not support it https://github.com/SAP/gigya-android-sdk/issues/3
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
-    }
-    buildFeatures {
-        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.7'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
-    implementation project(":demo-common")
+    implementation 'androidx.activity:activity-compose:1.7.2'
 
+    implementation 'androidx.compose.material3:material3:1.1.0'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.4.3'
+
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.4.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.4.3'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+
+    implementation "com.ownid.android-sdk:compose:2.2.0"
     implementation "com.ownid.android-sdk:gigya:2.2.0"
 }
