--- a/sdk-compose/build.gradle
+++ b/sdk-compose/build.gradle
@@ -5,16 +5,16 @@ plugins {
 }
 
 ext {
-    name = "OwnID Gigya Android SDK"
+    name = "OwnID Compose Android SDK"
     groupId = "com.ownid.android-sdk"
-    artifactId = "gigya"
+    artifactId = "compose"
     versionName = "2.2.1"
 }
 
 apply from: rootProject.file("publishing.gradle")
 
 android {
-    namespace "com.ownid.sdk.gigya"
+    namespace "com.ownid.sdk.compose"
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
@@ -27,10 +27,6 @@ android {
         }
     }
 
-    testOptions {
-        unitTests { includeAndroidResources = true }
-    }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -38,8 +34,21 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
-        freeCompilerArgs += ["-module-name", "com.ownid.sdk.gigya"]
         freeCompilerArgs += "-Xexplicit-api=strict"
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.4.7"
+    }
+
+    packagingOptions {
+        resources {
+            excludes += "/META-INF/{AL2.0,LGPL2.1}"
+        }
     }
 
     lint {
@@ -53,23 +62,18 @@ android {
 
 dependencies {
     api project(":sdk-core")
-    //noinspection GradleDependency
-    api "androidx.annotation:annotation:1.3.0"
-    api "com.github.SAP.gigya-android-sdk:sdk-core:core-v6.1.0"
-    api "com.google.code.gson:gson:2.10"
 
-    testImplementation "junit:junit:4.13.2"
-    testImplementation "androidx.test.ext:truth:1.5.0"
-    testImplementation "org.robolectric:robolectric:4.9"
-    testImplementation "org.awaitility:awaitility-kotlin:4.2.0"
-    testImplementation "io.mockk:mockk:1.13.2"
+    api "androidx.compose.ui:ui:1.4.3"
+    api "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
 }
 
-def propertiesFileName = "src/main/assets/com/ownid/sdk/gigya.properties"
 
+def propertiesFileName = "src/main/assets/com/ownid/sdk/compose.properties"
+
+clean { delete propertiesFileName }
 task setVersionProperties(type: WriteProperties) {
     outputFile file(propertiesFileName)
-    property "name", "OwnIDGigya"
+    property "name", "OwnIDCompose"
     property "version", project.ext.versionName
 }
 
