--- a/sdk-core/build.gradle
+++ b/sdk-core/build.gradle
@@ -55,15 +55,14 @@ android {
 }
 
 dependencies {
-    api("org.jetbrains.kotlin:kotlin-stdlib:1.9.22")
-    api("androidx.core:core-ktx:1.12.0")
-    api("androidx.fragment:fragment:1.6.2")
-    api("androidx.appcompat:appcompat:1.6.1")
+    api("org.jetbrains.kotlin:kotlin-stdlib:1.8.22")
     api("com.google.android.material:material:1.11.0")
+    api("androidx.fragment:fragment:1.6.2")
     api("androidx.constraintlayout:constraintlayout:2.1.4")
     api("androidx.browser:browser:1.7.0")
     api("androidx.webkit:webkit:1.9.0")
-    api("com.squareup.okhttp3:okhttp:4.12.0")
+    api("com.squareup.okio:okio:3.4.0")
+    api("com.squareup.okhttp3:okhttp:4.11.0")
 
     api("androidx.credentials:credentials:1.2.0")
     api("androidx.credentials:credentials-play-services-auth:1.2.0")
